--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "d3-sankey": "^0.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
